Make sure images don't overflow out of the site width

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -32,6 +32,10 @@ along with strugee.net.  If not, see <http://www.gnu.org/licenses/>.x
 	background-color: #F0F0F0;
 }
 
+img {
+	width: 100%;
+}
+
 #topheader {
 	font-family: monospace, "Courier New", Courier, mono;
 }
